--- a/index.html
+++ b/index.html
@@ -95,13 +95,7 @@ a{color:inherit;text-decoration:none}
   border-bottom:1px solid rgba(0,0,0,0.06);
   transition:all .25s ease;
 }
-.header-inner{
-  height:var(--header-h);
-  display:flex; align-items:center; justify-content:space-between;
-  gap:16px;
-  /* в контейнер, чтобы край в линию с контентом */
-  max-width:var(--container); margin:0 auto; padding:0 var(--gutter);
-}
+.header-inner{ height:var(--header-h); display:flex; align-items:center; justify-content:space-between; padding: 16px; margin: 0 20px 0 20px; }
 .brand{ font-weight:800; font-size:19px; letter-spacing:.1px; color:var(--accent-brown) }
 
 .nav{ display:flex; align-items:center; gap:28px; font-size:15px }
@@ -130,7 +124,6 @@ a{color:inherit;text-decoration:none}
   transition:transform .28s ease;
   display:flex; flex-direction:column;
 }
-.mobile-menu.open{ transform:translateY(0) }
 
 .menu-header{
   height:64px; padding:0 20px;
@@ -143,12 +136,6 @@ a{color:inherit;text-decoration:none}
   cursor:pointer; color:#444; padding:8px 10px; border-radius:10px;
 }
 
-.menu-nav{
-  display:flex; flex-direction:column; gap:24px;
-  padding:20px; font-size:18px;
-}
-.menu-nav a{ color:#222426 }
-
 .menu-cta{
   margin:16px 20px 20px;
   background:var(--btn-primary); color:#fff; text-align:center;
@@ -160,8 +147,7 @@ a{color:inherit;text-decoration:none}
    ========================= */
 .hero{ padding:calc(var(--header-h) + 36px) 0 96px }
 .hero-grid{
-  display:grid; grid-template-columns:1.1fr 0.9fr; gap:48px; align-items:center;
-  max-width:var(--container); margin:0 auto; padding:64px var(--gutter);
+  display:flex;justify-content: space-between; grid-template-columns: 1.1fr 0.9fr; gap:48px; align-items:center; padding: 64px 16px 64px 16px; margin: 0 20px 0 20px;
 }
 .hero-left{ min-width:0 }
 
@@ -202,6 +188,7 @@ a{color:inherit;text-decoration:none}
 .hero-photo{
   background:#fff; border-radius:24px; overflow:hidden;
   border:1px solid rgba(0,0,0,0.05); box-shadow:0 12px 28px rgba(0,0,0,0.06);
+  margin: 0 106px 0 106px
 }
 .hero-photo-frame{ aspect-ratio:4 / 5; width:100% }
 .hero-photo img{ width:100%; height:100%; object-fit:cover }
@@ -276,15 +263,17 @@ a{color:inherit;text-decoration:none}
 
 /* открытие мобильного меню */
 
-/* .burger{display:block !important}
-.nav{display:none !important} */
-
 
 /* =========== АДАПТИВ =========== */
 @media (max-width:1100px){
-  .burger{display:block !important}
-.nav{display:none !important}
   .hero-title{ font-size:50px }
+  .burger{display:block !important}
+  .nav{display:none !important}
+  /*.btn-primary {
+    width: 93px;
+    height: 56px;
+    padding:0 40px 0 40px ;
+  }*/
 }
 @media (max-width:920px){
   .nav{ display:none }            /* прячем десктоп-навигацию */
@@ -622,6 +611,11 @@ a{color:inherit;text-decoration:none}
   box-shadow:0 1px 0 rgba(0,0,0,0.02) inset;
   transition: background 0.2s ease;
 }
+
+.price-badge img {
+  width: 80px;
+}
+
 .price-card:hover .price-badge { background:#E8DCCD; }
 .price-badge .icon{
   width:64px; height:64px;              /* крупная иконка */
@@ -1449,7 +1443,7 @@ a{color:inherit;text-decoration:none}
 .mobile-menu{
   position:fixed;
   top:0; left:0; right:0;
-  height:50vh;                  /* высота меню */
+  height:330px;                  /* высота меню */
   z-index:200;
   background:#fff;
   transform:translateY(-100vh); /* уезжает за пределы всего экрана */
@@ -1468,7 +1462,7 @@ a{color:inherit;text-decoration:none}
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 }
 
 .menu-brand {
@@ -1489,21 +1483,6 @@ a{color:inherit;text-decoration:none}
 }
 .menu-close:hover { color: var(--accent-brown); }
 
-.menu-nav {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  font-size: 18px;
-  color: #222426;
-}
-
-.menu-nav a {
-  text-decoration: none;
-  opacity: 1;
-  transition: color 0.2s ease;
-}
-.menu-nav a:hover { color: var(--accent-brown); }
-
 .menu-cta {
   margin-top: auto;
   padding: 14px 28px;
@@ -1515,7 +1494,38 @@ a{color:inherit;text-decoration:none}
   text-align: center;
   transition: .2s;
 }
-.menu-cta:hover {
+
+.menu-cta1 {
+  width: 115px;
+  padding: 10px 8px;
+  background: var(--btn-primary);
+  color: #fff;
+  border-radius: 7px;
+  font-weight: 700;
+  font-size: .875rem;
+  line-height: 1.25rem;
+  text-align: center;
+  transition: .2s;
+  box-sizing: none;
+}
+
+.menu-nav {
+  display: flex;
+  flex-direction: column;
+  padding:15px;
+  gap: 17px;
+  font-size: 16px;
+  color: #222426;
+}
+
+.menu-nav a {
+  text-decoration: none;
+  opacity: 1;
+  transition: color 0.2s ease;
+}
+.menu-nav a:hover { color: var(--accent-brown); }
+
+.menu-cta1:hover {
   background: var(--btn-primary-hover);
 }
 
@@ -1525,7 +1535,7 @@ a{color:inherit;text-decoration:none}
 
 <!-- ===== ХЕДЕР ===== -->
 <header class="site-header">
-  <div class="header-inner container">
+  <div class="header-inner">
     <div class="brand">Евгения Беленко</div>
 
     <nav class="nav">
@@ -1559,8 +1569,9 @@ a{color:inherit;text-decoration:none}
     <a href="#steps">Как проходит терапия</a>
     <a href="#prices">Услуги и цены</a>
     <a href="#contacts">Контакты</a>
+    <a class="menu-cta1" href="#booking">Записаться</a>
   </nav>
-  <a class="menu-cta" href="#booking">Записаться</a>
+  
 </div>
 
 
@@ -1882,7 +1893,7 @@ a{color:inherit;text-decoration:none}
         <article class="price-card">
           <div class="price-badge">
             <!-- один человек -->
-            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke-width="0.9" stroke-linecap="round" stroke-linejoin="round">
               <path d="M20 21a8 8 0 0 0-16 0"></path>
               <circle cx="12" cy="7" r="4"></circle>
             </svg>
@@ -1897,11 +1908,7 @@ a{color:inherit;text-decoration:none}
         <article class="price-card">
           <div class="price-badge">
             <!-- два человека -->
-            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M7 21a6 6 0 0 1 10 0"></path>
-              <circle cx="9" cy="8" r="3"></circle>
-              <circle cx="15" cy="8" r="3"></circle>
-            </svg>
+            <img src="people.png" alt="">
           </div>
           <div class="price-title">Парная терапия</div>
           <div class="price-sub">90 минут</div>
