--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ a{color:inherit;text-decoration:none}
   margin: 0 106px 0 106px
 }
 .hero-photo-frame{ aspect-ratio:4 / 5; width:100% }
-.hero-photo img{ width:100%; height:100%; object-fit:cover }
+.hero-photo img{max-width: 448px; width:100%; height:100%; object-fit:cover }
 
 /* Мобильное фото под заголовком */
 .hero-photo-1{ display:none } /* скрыто на десктопе */
