--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body{
   margin:0;
   font-family:"Inter",system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   color:var(--txt-main);
-  background:linear-gradient(to bottom,var(--bg-top) 0%,var(--bg-bottom) 100%) fixed;
+  background:linear-gradient(to bottom,#d3ded7 0%,#d3ded7 100%) fixed;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
 }
@@ -145,7 +145,7 @@ a{color:inherit;text-decoration:none}
 /* =========================
    HERO (первый экран, обновлено)
    ========================= */
-.hero{ padding:calc(var(--header-h) + 36px) 0 96px }
+.hero{ padding:calc(var(--header-h) + 36px) 0 96px; background: linear-gradient(to bottom, #ffffff 0%, #d3ded7 100%); }
 .hero-grid{
   display:flex;justify-content: space-between; grid-template-columns: 1.1fr 0.9fr; gap:48px; align-items:center; padding: 64px 16px 64px 16px; margin: 0 20px 0 20px;
 }
@@ -573,7 +573,7 @@ a{color:inherit;text-decoration:none}
    ========================= */
 .prices{
   padding:70px 0 88px;
-  background: linear-gradient(to bottom, #F7FBF8 0%, #DEEDE6 100%);
+  background: linear-gradient(to bottom, #ffffff 0%, #d3ded7 100%);
   border-top: 1px solid rgba(0,0,0,0.05);
 }
 .prices .title{
@@ -1593,7 +1593,7 @@ a{color:inherit;text-decoration:none}
       </aside>
 
       <p class="hero-sub">
-        В моем пространстве нет шаблонных решений — только Ваш путь, поддержка и пространство для изменений.
+        В моей работе нет шаблонных решений — только Ваш путь, поддержка и пространство для изменений.
       </p>
 
       <div class="hero-actions">
@@ -1604,7 +1604,7 @@ a{color:inherit;text-decoration:none}
       <div class="hero-chips">
         <span class="chip">В практике с 2018</span>
         <span class="chip"> Полная конфиденциальность</span>
-        <span class="chip">Очные и онлайн-работы</span>
+        <span class="chip">Очная и онлайн-работа</span>
         <span class="chip"> Поэтапный результат</span>
       </div>
     </div>
@@ -1823,7 +1823,7 @@ a{color:inherit;text-decoration:none}
         </article>
       </div>
 
-      <div class="steps-note">Индивидуальная 50 мин • Парная 90 мин • Отмена за 24 часа</div>
+      <div class="steps-note">Индивидуальная 50 мин • Парная 90 мин</div>
     </div>
   </section>
 
@@ -1831,9 +1831,8 @@ a{color:inherit;text-decoration:none}
   <!-- ===== МЕТОДЫ РАБОТЫ В ПСИХОТЕРАПИИ ===== -->
 <section class="methods" id="methods">
   <div class="container">
-    <h2 class="methods-title">Методы работы в психотерапии</h2>
-    <div class="methods-sub">Как проходит моя работа</div>
-    <p class="methods-desc">Вот несколько методов, которыми я работаю</p>
+    <h2 class="methods-title">Методы, которые я использую в работе</h2>
+    <p class="methods-desc"></p>
 
     <div class="methods-grid">
       <!-- 1 -->
@@ -1863,7 +1862,7 @@ a{color:inherit;text-decoration:none}
           </svg>
         </div>
         <h3 class="m-title">Транзактный анализ</h3>
-        <p class="m-text">Изучение с помощью анализа взаимодействий в отношениях.</p>
+        <p class="m-text">Помогает понять, как Вы общаетесь с другими людьми и с самим собой, какие роли занимаете в отношениях и как их можно изменить для большего понимания и близости.</p>
       </article>
 
       <!-- 3 -->
