--- a/index.html
+++ b/index.html
@@ -1679,7 +1679,7 @@ a{color:inherit;text-decoration:none}
           </svg>
         </div>
         <div class="h">Уважение к границам</div>
-        <div class="p">Работаем в комфортном для вас теме и формате</div>
+        <div class="p">Работаем в комфортном для Вас теме и формате</div>
       </div>
     </div>
   </div>
@@ -1766,7 +1766,7 @@ a{color:inherit;text-decoration:none}
             </div>
             <h3>Ваш случай уникален</h3>
           </div>
-          <p>Не нашли свой запрос в списке или сложно его сформулировать? Начнём с простого разговора — расскажите, что вас беспокоит, и мы вместе найдём путь к решению.</p>
+          <p>Не нашли свой запрос в списке или сложно его сформулировать? Начнём с простого разговора — расскажите, что Вас беспокоит, и мы вместе найдём путь к решению.</p>
           <a href="#booking" class="cta">Записаться по этому запросу <span class="arrow">→</span></a>
         </article>
         <!-- Пустой гибкий элемент для симметрии строки (создаёт правый зазор как на макете) -->
@@ -1885,7 +1885,7 @@ a{color:inherit;text-decoration:none}
   <section id="prices" class="prices">
     <div class="container">
       <h2 class="title">Стоимость услуг</h2>
-      <p class="subtitle">Веду частные консультации в Санкт-Петербурге и онлайн - весь мир.</p>
+      <p class="subtitle">Веду очные консультации в Санкт-Петербурге и онлайн- с клиентами по всему миру.</p>
 
       <div class="price-grid">
         <!-- Индивидуальная -->
@@ -1916,7 +1916,7 @@ a{color:inherit;text-decoration:none}
         </article>
       </div>
 
-      <div class="prices-note">Оплата картой/переводом • Отмена за 24 часа • Квитанция по запросу</div>
+      <!-- <div class="prices-note"></div> -->
     </div>
   </section>
 
@@ -2152,7 +2152,7 @@ a{color:inherit;text-decoration:none}
           </div>
           <div class="wf-title">Терапевтические отношения</div>
           <p class="wf-text">
-            Личность психолога и терапевтические отношения с клиентом — главный критерий успешности терапии.
+            Личность психолога и терапевтические отношения с клиентом — главный критерий успешной терапии.
           </p>
         </article>
 
@@ -2166,7 +2166,7 @@ a{color:inherit;text-decoration:none}
           </div>
           <div class="wf-title">Личный опыт</div>
           <p class="wf-text">
-            Знаю что такое кризис и выгорание не только по книжкам. Благодаря своему опыту и непрерывно продолжающемуся образованию смогу вас понять и помочь обеспечить реальную опору.
+            Знаю что такое кризис и выгорание не только по книжкам. Благодаря своему опыту и непрерывно продолжающемуся образованию смогу Вас понять и помочь обеспечить реальную опору.
           </p>
         </article>
       </div>
@@ -2184,28 +2184,31 @@ a{color:inherit;text-decoration:none}
         <div class="fact">
           <div class="fact-num">1</div>
           <div class="fact-text">
-            Краснодарский край → стоматология (10 лет) → психология: работать с человеком целиком.
+            Я Родом из Краснодарского края.
+            10 лет работала стоматологом, пока не поняла: мне ближе внутренний мир человека.
+            Переезды в Москву и Петербург научили меня адаптации и гибкости.
+            В терапии я вижу человека целиком: его чувства, мысли и телесные реакции.
           </div>
         </div>
 
         <div class="fact">
           <div class="fact-num">2</div>
           <div class="fact-text">
-            В людях ценю сочетание силы и уязвимости — слушаю, замечаю, берегу.
+            Мне близка уникальность каждого человека. В каждом я вижу сочетание силы и уязвимости — и именно это делает мою работу бесконечно живой. Я слушаю, замечаю и бережно отношусь к этому уникальному сочетанию в каждом.
           </div>
         </div>
 
         <div class="fact">
           <div class="fact-num">3</div>
           <div class="fact-text">
-            Люблю путешествия ради тишины и воды — и идеальный кофе по утрам.
+            Я люблю путешествия не ради галочки, а ради мгновений тишины у воды, когда мысли отпускают. А ещё — за кофе по утрам, вкус которого хранит атмосферу места.
           </div>
         </div>
 
         <div class="fact">
           <div class="fact-num">4</div>
           <div class="fact-text">
-            Завтраки — мой способ заботы: просто, вкусно, по-домашнему.
+            Я обожаю готовить завтраки — это мой способ заботиться и делать день тёплым с самого утра
           </div>
         </div>
       </div>
@@ -2224,7 +2227,7 @@ a{color:inherit;text-decoration:none}
         <!-- 1 -->
         <article class="res-acc" aria-expanded="false">
           <header class="res-head" role="button">
-            <div class="res-h">5 признаков, что пришло время к психологу</div>
+            <div class="res-h">5 признаков, что пришло время обратится к психологу</div>
             <svg class="res-chev" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
           </header>
           <div class="res-body">
@@ -2249,13 +2252,13 @@ a{color:inherit;text-decoration:none}
           <div class="res-body">
             <div class="res-inner">
               <ul class="res-list">
-                <li class="res-item"><div class="res-num">1</div><div class="res-text"><b>О границах</b><br>Границы — это внутренние рамки, которые определяют, что для вас приемлемо, а что не.</div></li>
+                <li class="res-item"><div class="res-num">1</div><div class="res-text"><b>О границах</b><br>Границы — это внутренние рамки, которые определяют, что для Вас приемлемо, а что нет.</div></li>
                 <li class="res-item"><div class="res-num">2</div><div class="res-text"><b>Почему это важно</b><br>Без границ легко чувствовать себя уставшим, «выжатым», брать на себя слишком много.</div></li>
                 <li class="res-item"><div class="res-num">3</div><div class="res-text"><b>Определите свои ценности и потребности</b><br>Спросите себя: что комфортно, что вызывает усталость?</div></li>
                 <li class="res-item"><div class="res-num">4</div><div class="res-text"><b>Учитесь говорить «нет»</b><br>Достаточно честного, спокойного отказа: «Я не могу это сделать сейчас».</div></li>
                 <li class="res-item"><div class="res-num">5</div><div class="res-text"><b>Выражайте свои чувства</b><br>Говорите без обвинений: «Мне некомфортно, когда…»</div></li>
-                <li class="res-item"><div class="res-num">6</div><div class="res-text"><b>Не бойтесь последствий</b><br>Некоторые могут не понять — это нормально. Сохраняйте спокойствие.</div></li>
-                <li class="res-item"><div class="res-num">7</div><div class="res-text"><b>Практикуйте самоуважение</b><br>Уважение к себе — основа здоровых отношений.</div></li>
+                <li class="res-item"><div class="res-num">6</div><div class="res-text"><b>Не бойтесь последствий</b><br>Некоторые могут не понять Ваши границы — это нормально. Сохраняйте спокойствие и последовательность.</div></li>
+                <li class="res-item"><div class="res-num">7</div><div class="res-text"><b>Практикуйте самоуважение</b><br>Уважение к себе — основа здоровых отношений с другими.</div></li>
               </ul>
             </div>
           </div>
@@ -2264,18 +2267,22 @@ a{color:inherit;text-decoration:none}
         <!-- 3 -->
         <article class="res-acc" aria-expanded="false">
           <header class="res-head" role="button">
-            <div class="res-h">Тип привязанности и как он влияет на ваши отношения</div>
+            <div class="res-h">Тип привязанности и как он влияет на Ваши отношения</div>
             <svg class="res-chev" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
           </header>
           <div class="res-body">
             <div class="res-inner">
               <ul class="res-list">
-                <li class="res-item"><div class="res-num">1</div><div class="res-text"><b>О типах привязанности</b><br>Формируются в детстве и влияют на то, как вы строите близость и доверяете.</div></li>
-                <li class="res-item"><div class="res-num">2</div><div class="res-text"><b>Безопасная привязанность</b><br>Комфорт в близости, умение доверять, отсутствие страха зависимости.</div></li>
-                <li class="res-item"><div class="res-num">3</div><div class="res-text"><b>Тревожная привязанность</b><br>Сильные переживания разлуки, страх быть покинутым.</div></li>
-                <li class="res-item"><div class="res-num">4</div><div class="res-text"><b>Избегающая привязанность</b><br>Предпочтение дистанции, независимости, избегание выражения чувств.</div></li>
-                <li class="res-item"><div class="res-num">5</div><div class="res-text"><b>Тревожно-избегающий тип</b><br>Сочетание стремления к близости и отдаления, внутренний конфликт.</div></li>
-                <li class="res-item"><div class="res-num">6</div><div class="res-text"><b>Как это влияет на отношения</b><br>Определяет реакцию на конфликты и доверие. Осознание типа помогает выйти из паттернов.</div></li>
+                <li class="res-item"><div class="res-num">1</div><div class="res-text"><b>Основные типы привязанности.</b><br>Безопасная привязанность Вы чувствуете комфорт в близости, умеете доверять и не боитесь зависимости.</div></li>
+                <li class="res-item"><div class="res-num">2</div><div class="res-text"><b>Тревожная привязанность.</b><br>Вы сильно переживаете разлуку, боитесь быть покинутым и часто нуждаетесь в подтверждении любви.</div></li>
+                <li class="res-item"><div class="res-num">3</div><div class="res-text"><b>Избегающая привязанность.</b><br>Вы держите дистанцию, не любите выражать чувства и предпочитаете независимость.</div></li>
+                <li class="res-item"><div class="res-num">4</div><div class="res-text"><b>Тревожно-избегающий тип привязанности.</b><br>Сочетание тревожного и избегающего поведения — Вы можете то стремиться к близости, то отдаляться, часто испытывая внутренний конфликт.
+                Как это влияет на отношения:
+                - Определяет, как Вы реагируете на конфликты, выражаете потребности и строите доверие.
+                - Может быть причиной повторяющихся сценариев в отношениях.
+                - Осознание своего типа помогает выйти из замкнутых паттернов.</div></li>
+                <!-- <li class="res-item"><div class="res-num">5</div><div class="res-text"><b> </b><br> </div></li>
+                <li class="res-item"><div class="res-num">6</div><div class="res-text"><b> </b><br> </div></li> -->
               </ul>
             </div>
           </div>
@@ -2479,7 +2486,6 @@ a{color:inherit;text-decoration:none}
           <div class="form-row">
             <input class="input" type="text" placeholder="Ваше имя" name="name">
             <input class="input" type="tel" placeholder="Телефон" name="phone">
-            <div class="ct-muted">Мы не звоним без согласия</div>
 
             <div class="label" style="font-size:15px; color:#2B2B2B; font-weight:700; margin-top:2px;">Способ связи</div>
             <div class="radio-row">
